# window-grid

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
window_grid/: main.py
