[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "window-grid"
description = "A window placement script for GTK3"
authors = [
    {name = "Jochen Klar", email = "mail@jochenklar.de"},
]
maintainers = [
    {name = "Jochen Klar", email = "mail@jochenklar.de"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Environment :: X11 Applications :: Gnome',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.9',
]
dependencies = [

]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "twine",
]

[project.urls]
repository = "https://github.com/jochenklar/window-grid"

[project.scripts]
window-grid = "window_grid.main:main"

[tool.setuptools_scm]
version_file = "window_grid/_version.py"

[tool.setuptools.packages.find]
include = ["window_grid*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.ruff]
target-version = "py39"
line-length = 120
lint.select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
lint.ignore = [
  "B006",   # mutable-argument-default
  "B007",   # unused-loop-control-variable
  "B018",   # useless-expression
  "RUF012", # mutable-class-default
]
